feat: Added endpoint to cancel transfers with business rules validation